# ev-route-app

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
src/ev_route_agent/: agents.py  crew.py  server.py  tasks.py
src/ev_route_agent/config/: providers.py
src/ev_route_agent/tools/: charging_station_tool.py  geocode_tool.py  ionity_tool.py  maps_link_builder.py  route_analysis_tool.py
static/: app.js  index.html  style.css
