[project]
name = "ev-route-webapp"
version = "0.1.0"
description = "EV Route Planner – Web App with CrewAI Agents"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "polyline>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ev-route-web = "ev_route_agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ev_route_agent"]
